Closed Bug 1726562 Opened 3 years ago Closed 3 years ago

Crash in [@ nsBaseWidget::CreateCompositor]

Categories

(Core :: Graphics, defect)

defect

Tracking

()

VERIFIED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 + verified

People

(Reporter: aryx, Assigned: mattwoodrow)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

15 crashes from 5+ installations, all with Firefox 93.0a1 20210818155306

Crash report: https://crash-stats.mozilla.org/report/index/71349b1e-76c4-44e2-8e6d-1ef980210818

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(enableWR)

Top 10 frames of crashing thread:

0 xul.dll nsBaseWidget::CreateCompositor widget/nsBaseWidget.cpp:1469
1 xul.dll nsBaseWidget::CreateCompositor widget/nsBaseWidget.cpp:936
2 xul.dll nsWindow::GetWindowRenderer widget/windows/nsWindow.cpp:4098
3 xul.dll mozilla::layout::RemoteLayerTreeOwner::Initialize layout/ipc/RemoteLayerTreeOwner.cpp:63
4 xul.dll mozilla::dom::BrowserParent::InitRendering dom/ipc/BrowserParent.cpp:911
5 xul.dll nsFrameLoader::TryRemoteBrowserInternal dom/base/nsFrameLoader.cpp:2744
6 xul.dll nsFrameLoader::ShowRemoteFrame dom/base/nsFrameLoader.cpp:1107
7 xul.dll nsFrameLoader::Show dom/base/nsFrameLoader.cpp:984
8 xul.dll nsSubDocumentFrame::ShowViewer layout/generic/nsSubDocumentFrame.cpp:197
9 xul.dll AsyncFrameInit::Run layout/generic/nsSubDocumentFrame.cpp:97
Severity: -- → S2

This is triggered by the display of a tooltip for users that have manually set 'gfx.webrender.software.unaccelerated-widget.allow' set to false. Resetting that pref addresses the issue. We'll clean this up.

Flags: needinfo?(matt.woodrow)
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Flags: needinfo?(matt.woodrow)
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Flags: qe-verify+

Reproduced the issue with Firefox 93.0a1 (20210819095342) on Windows 10x64 and by setting gfx.webrender.software.unaccelerated-widget.allow to false by visiting a login page like Facebook or hovering over Firefox toolbar items.
The gfx.webrender.software.unaccelerated-widget.allow pref is no loger available inside Firefox 93.0b9 (20210923190449). Also, Firefox does not crash when hovering over toolbar items or when visiting a login page. (Facebook/ Bugzilla)

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: