Bug 1726562 - Remove option to disable software webrender for popups. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D123159