gfx/thebes/gfxPlatform.cpp
@@ -1191,15 +1191,6 @@ bool gfxPlatform::IsHeadless() {
 bool gfxPlatform::UseWebRender() { return gfx::gfxVars::UseWebRender(); }
 
 /* static */
-bool gfxPlatform::DoesFissionForceWebRender() {
-  // Because WebRender doesn't currently support all of the tests that Fission
-  // runs in CI, we only require WebRender for users who are enrolled in the
-  // the Fission experiment. This applies to both the control and the treatment
-  // groups, so they are as comparable as possible.
-  return FissionExperimentEnrolled();
-}
-
-/* static */
 bool gfxPlatform::UseRemoteCanvas() {
   return XRE_IsContentProcess() && gfx::gfxVars::RemoteCanvasEnabled();
 }
